--- a/_config.yml
+++ b/_config.yml
@@ -24,16 +24,16 @@ description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/whippets" # the subpath of your site, e.g. /blog
+baseurl: "/whippets" #whippets"  #the subpath of your site, e.g. /blog
 url: "danakongur.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
 
 collections:
-  collection: # also change this to collection name
+  whippets: # also change this to collection name
     output: true
-    permalink: /collection/:name # change this to the name of collection
+    permalink: /whippets/:name # change this to the name of collection
 
 # Exclude from processing.
 # The following items will not be processed, by default.
